# vibe-secrets

./: .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
claude/: README.md
claude/skills/vibe-secrets/: SKILL.md
concept/: PRD.md  clarification.md  wireframe.md
src/vibe_secrets/: __init__.py  audit.py  backup.py  cli.py  clipboard.py  config.py  envwriter.py  installer.py  keystore.py  models.py  projectops.py  registry.py  resolver.py  scanner.py  templates.py  tui.py  vault.py
tests/: conftest.py  test_backup.py  test_cli.py  test_completion.py  test_envwriter.py  test_installer.py  test_projectops.py  test_registry.py  test_reset_master.py  test_resolver.py  test_scanner.py  test_setup_emit.py  test_vault.py
